# IPF_Study

./: DeepLung_README.txt  Directory Structure.docx  How_To_Process_IPF_General.docx  How_To_Process_IPF_OHSU_Sysytem_FINAL.docx  LungRegBuild.docx  Lungseg Instructions.docx  README.md
ScriptsToProcessIPF/: .Rhistory  B30f_2mm_iso.txt  B50f_600um.txt  CalculateAvoidanceMapsAuto.m  CompileJacsForLERN.sh  ComputeAllVolumesAuto.m  CreateCNNMask.sh  JustJacPost.sh  ParamImage3Dto4D.txt.in  ParamImage3Dto4D_MorePhases.txt.in  Parameters.txt.in  ProcessDiffTimepoint.txt  ProcessDifferentTimepoint.sh  ProcessLERNRegs.sh  ProcessLERNRegs.txt  ProcessSameTimepoint.sh  ProcessSameTimepoint.txt  README.txt  RunAllAlphaShape.sh  SameTimeJustWarp.sh  SortCTToFolders.m  WarpLERN.sh  alphashape.sh  avoidanceToDICOM.sh  convertAllCT.sh  convert_B30f.txt  convert_kernels.txt  convert_kernels_B50f.txt  image3Dto4D.sh  image4Dto3D.sh  jacAndJacWarpToDICOM.sh  jacobiansAndAvoidanceToDICOM.sh  jacobiansToDICOM.sh  p_alphashape.sh  p_convertDICOMtoNIFTI_Convert.sh  parallel-20180622.tar.bz2  parallel-20230422.tar.bz2  parseDicomNewStructure.m  parseDicomNewStructureNewSwine.m  phases.txt  (+23 more)
ScriptsToProcessIPF/LERN/: .Rhistory  LER4D_100.R  ProcessLERNRegs.txt  regWorkflowVessel_low_epsilon.sh  runAllPhaseReg.sh  runLER4D.sh  runRegistrationVessel_low_epsilon.sh
ScriptsToProcessIPF/octave-8.2.0/: HG-ID  Makefile.in  configure
ScriptsToProcessIPF/parallel-20230422/: Makefile  README  config.h  (+3 more)
niftiToDicom/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: .Rhistory
(+3027 files in other folders)
